5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1880_3180.log
== TEST (2019-07-03 15:22:49) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes")))
i = zeros(6, dtype=int)
for vet in range (i)
	vet[0] = vet[0] + 1
-- ERROR:
File "XXXX", line 4
    for vet in range (i)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:21) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:23:24) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- EXECUTION TIME:
1.13271
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3180/main.py", line 5, in <module>
    vet[0] = vet[0] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:27) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:23:41) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:24:34) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:24:38) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
-- EXECUTION TIME:
1.14061
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3180/main.py", line 5, in <module>
    vet[0] = vet[0] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:26:29) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
	print(tipo 1)
	
-- ERROR:
File "XXXX", line 6
    print(tipo 1)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:26:46) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
	print(tipo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:27:33) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[0] = vet[0] + 1
	print(tipo)
	
-- EXECUTION TIME:
1.02368
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3180/main.py", line 5, in <module>
    vet[0] = vet[0] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:28:01) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[i] = vet[i] + 1
	print(tipo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:28:39) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[i] = vet[i] + 1
	print(tipo)
	
-- EXECUTION TIME:
0.866838
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3180/main.py", line 5, in <module>
    vet[i] = vet[i] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:43:42) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[i] = vet[i] + 1
	print(tipo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 15:44:03) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[i] = vet[i] + 1
	print(tipo)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-03 15:44:06) 
-- CODE:
from numpy import *
vet = array(eval(input("Sorotipos dos pacientes: ")))
i = zeros(6, dtype=int)
for vet in range (size(vet)):
	vet[i] = vet[i] + 1
	print(tipo)
	
-- EXECUTION TIME:
1.25545
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1880/3180/main.py", line 5, in <module>
    vet[i] = vet[i] + 1
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
